fix misalignment of links when app is logged out

--- a/client/src/components/Navbar.module.css
+++ b/client/src/components/Navbar.module.css
@@ -36,6 +36,14 @@
   cursor: pointer;
 }
 
+.Navbar__linksContainer {
+  flex: 1;
+  display: flex;
+  justify-content: right;
+  gap: 2.4rem;
+  margin-left: auto;
+}
+
 .Navbar__link {
   color: var(--grey-light);
   text-decoration: none;
